fix overflow

--- a/themes/default/scss/header.scss
+++ b/themes/default/scss/header.scss
@@ -42,6 +42,7 @@ a {
 /* menu */
 
 .header .menu {
+    font-size: 0.6em;
     clear: both;
     max-height: 0;
     transition: max-height .2s ease-out;
