--- a/themes/default/scss/startpage.scss
+++ b/themes/default/scss/startpage.scss
@@ -6,8 +6,6 @@
 
 body {
     header {
-        width: 100%;
-        height: 10vh;
         text-align: left;
         top: 0;
         nav {
